--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -115,8 +115,7 @@ blog:
                     <a href="/collections/fall-winter/">
                         <div class="cta-title">
                             <h2 class="open-s">The New<span class="league"> Fall/Winter Collection</span></h2>
-                            <span>Click Here >></span>
-                            <div class="grey-line"></div>
+                            <span class="view-more">view now</span>
                         </div>
                     </a>
                 </div>
@@ -145,7 +144,7 @@ blog:
                 <a href="/collections/fall-winter/">
                   <div class="cta-title">
                     <h2 class="open-s">Fall/Winter<span class="league">  Lookbook</span></h2>
-                    <span>Click Here >></span>
+                   <span class="view-more">view now</span>
                   </div>
                 </a>
               </div>
