--- a/templates/pages/page.html
+++ b/templates/pages/page.html
@@ -3,7 +3,7 @@
 {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 
 <main class="page">
-
+    <div class="container">
     <h1 class="page-heading">{{ page.title }}</h1>
 
     {{#if page.sub_pages}}
@@ -34,6 +34,7 @@
             {{/each}}
         </ul>
     {{/if}}
+   </div> 
 </main>
 
 {{/partial}}
