--- a/assets/scss/layouts/_layouts.scss
+++ b/assets/scss/layouts/_layouts.scss
@@ -69,6 +69,8 @@
 // Account
 @import "account/account";
 
+//  TT Product Styles
+@import "products/product-page";
 
 // Globa Style Overrides
 @import "overrides";
