--- a/assets/scss/layouts/_overrides.scss
+++ b/assets/scss/layouts/_overrides.scss
@@ -1,9 +1,10 @@
-.body {
+.marg-top {
   margin-bottom:0;
 }
 
 @media (min-width:992px) {
-  .body {
+  .marg-top {
     margin-top:10rem;
   }
+  
 }
