--- a/assets/scss/layouts/_variables.scss
+++ b/assets/scss/layouts/_variables.scss
@@ -11,3 +11,10 @@ $robot: 'Roboto Slab';
 $gold: #fec346; 
 $red: #b32424;
 $dark-gray: #333333;
+$light-gray: #eee;
+
+
+
+// Margin Top
+$header-height: 4.6rem;
+
