--- a/assets/scss/layouts/buttons/_buttons.scss
+++ b/assets/scss/layouts/buttons/_buttons.scss
@@ -3,7 +3,7 @@
   border:none;
   border-top-color:none;
   border-left-color:none;
-  padding: 1rem 2rem;
+  padding: 0.50rem;
   color: white;
   display: inline-block;
   font-size:1rem;
@@ -13,7 +13,7 @@
   cursor: pointer;
   text-transform:uppercase;
   margin-bottom:0;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
   background-color: #ab2b2b;
   background-image: linear-gradient(to bottom, #ab2b2b, #ab2b2b);
 }
