--- a/assets/scss/layouts/products/_productGrid.scss
+++ b/assets/scss/layouts/products/_productGrid.scss
@@ -20,10 +20,13 @@
         h4 {
             min-height: 2.3rem;
             a {
-            font-size:1.2em;
+            font-size:1.31rem;
             font-weight: 600;
             color:$red;     
             }
+        }
+        .rating--small {
+            display: none;
         }
         .card-text {
             font-size:1.2rem;
