--- a/templates/components/products/options/set-rectangle.html
+++ b/templates/components/products/options/set-rectangle.html
@@ -1,5 +1,5 @@
 <div class="form-field" data-product-attribute="set-rectangle">
-    <label class="form-label form-label--alternate form-label--inlineSmall">
+    <label class="form-label form-label--alternate form-label--inlineSmall" style="display:none;">
         {{this.display_name}}:
         <span data-option-value></span>
 
