--- a/templates/components/products/related.html
+++ b/templates/components/products/related.html
@@ -1,3 +1,4 @@
+<div class="container"> 
 <h4>{{lang 'products.related_products' }}</h4>
 <ul class="product-list">
     {{#each this}}
@@ -6,3 +7,5 @@
     </li>
     {{/each}}
 </ul>
+</div>
+
