mostly desktop done.

--- a/assets/scss/layouts/_layouts.scss
+++ b/assets/scss/layouts/_layouts.scss
@@ -39,10 +39,20 @@
 // Home Page
 @import "homepage/homepage";
 
+// Default Page Styles
+@import "page";
 
 // Category Page Styles
 @import "category";
 
+// Category Page Styles
+@import "lookbooks";
+
+// Category Page Styles
+@import "contact-us";
+
+// Default Page Styles
+@import "about-us";
 
 
 // Page content layouts
