--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -37,7 +37,7 @@
     padding-top: 10px;
     border:none;
     ul { 
-      line-height: 90px; 
+      line-height: 7; 
     }
     li {
       display:block; 
@@ -108,7 +108,7 @@
     .social-links,
     .store-links {
       li {
-        margin:0 0.5rem;
+       
         float:left; 
         color:#fff;
         font-family: $league;
@@ -116,14 +116,26 @@
         a {
           font-family: $league;
           color:#fff;
+          &:hover {
+            color:$gold;
+          }
         }
       }
     }
     .social-links {
+      padding-left:1rem;
       float: left;
+      li {
+         margin:0 0.4rem 0 0;
+        .fa {
+          font-size:0.80rem;
+        }
+      }
     }
     .store-links {
+      padding-right:1rem;
       float: right;
+       margin:0 0 0 0.5rem ;
     }
   }    
 }
