--- a/assets/scss/layouts/products/_product-page.scss
+++ b/assets/scss/layouts/products/_product-page.scss
@@ -64,9 +64,11 @@
     }
     .productView-description {
         width: 75%;
+        float: right;
         padding-bottom:1.5rem;
         text-align: right;
         border-bottom:1px solid $light-gray;
+        padding-right:0;
     }
     .productView-options {
         .form-input {
@@ -78,6 +80,9 @@
     }
     .product-price-addtocart-wrap {
         float: right;
+        .button{
+            margin-right:0;
+        }        
     }
     .productView-price {
         font-family: $robot;
@@ -86,6 +91,18 @@
             position: relative;
             top:0.30rem;
             margin-right:1rem;
+        }
+
+    }
+    .qty-wrap {
+        float: right;
+        position: relative;
+        top:0.20rem;
+        label {
+            font-family:$robot;
+            position: relative;
+            top:0.20rem;
+            margin-right:0.70rem;
         }
     }
 }
