--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -201,7 +201,7 @@
                         
                         {{#if product.can_purchase}}
 
-                            <div class="form-field form-field--increments">
+                            <div class="form-field form-field--increments inline qty-wrap">
                                 <label class="form-label inline form-label--alternate"
                                        for="qty[]">QTY:</label>
 
