--- a/assets/scss/layouts/_category.scss
+++ b/assets/scss/layouts/_category.scss
@@ -7,7 +7,7 @@
     background:url(../img/mobile-mens-banner.jpg) no-repeat center top;    
   }
   .category-option-wrap {
-    margin:2rem 0 3rem;
+    margin:0 0 3rem;
   }
   .breadcrumbs {
     background:none;
@@ -39,7 +39,7 @@
         top: 1px;
       }      
       &.is-active {
-      font-size:6rem;
+      font-size:4.3rem;
       text-transform: uppercase;
       font-family: $league;
       display: block;
