--- a/assets/scss/layouts/footer/_footer.scss
+++ b/assets/scss/layouts/footer/_footer.scss
@@ -77,6 +77,7 @@
         ul {
           display: inline-block;
           padding:0; 
+          margin:0 0 1rem;
         }
         li { 
           float: left;
@@ -89,7 +90,7 @@
           height:100%; 
           text-decoration:none;
           color:$gold;
-          font-size:2rem;
+          font-size:1.5rem;
         }      
       } 
     }
