--- a/templates/pages/blog.html
+++ b/templates/pages/blog.html
@@ -9,7 +9,7 @@ blog:
 
 {{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
 
-<main class="page">
+<main class="page blog-wrapper marg-top">
     <h1 class="page-heading">{{ blog.name }}</h1>
 
     {{#each blog.posts}}
