--- a/templates/pages/contact-us.html
+++ b/templates/pages/contact-us.html
@@ -1,27 +1,19 @@
 {{#partial "page"}}
 
-{{> components/common/breadcrumbs breadcrumbs=breadcrumbs}}
+<main class="page contact-wrapper">
 
-<main class="page">
+  <div class="contact-header big-bg">
+    <h2 class="league">contact us</h2>
+  </div>
+    <div class="page-content">
 
-    <h1 class="page-heading">{{page.title}}</h1>
-
-    {{#if page.sub_pages}}
-        <nav class="navBar">
-            <ul class="navBar-section">
-                {{#each page.sub_pages}}
-                    <li class="navBar-item"><a class="navBar-action" href="{{url}}">{{title}}</a></li>
-                {{/each}}
-            </ul>
-        </nav>
-    {{/if}}
-
-    <div class="page-content page-content--centered">
         {{#if forms.contact.success}}
             {{{lang 'forms.contact_us.successful' shopPath=urls.home}}}
         {{else}}
-            <p>{{{page.content}}}</p>
-            {{> components/page/contact-us-form}}
+            <div class="container">
+                {{> components/page/contact-us-form}}
+            </div>
+
         {{/if}}
 
     </div>
