--- a/assets/scss/layouts/_layouts.scss
+++ b/assets/scss/layouts/_layouts.scss
@@ -43,7 +43,7 @@
 // Category Page Styles
 @import "category";
 
-
+@import "lookbooks";
 
 // Page content layouts
 // -----------------------------------------------------------------------------
